# MemGen

./: README.md  main.py  pyproject.toml
larm/memory_generator/: memgen_model.py  memgen_runner.py
scripts/: trigger_train.sh  weaver_train.sh
